# okanban

./: .gitignore  LICENSE  README.md  dune-project  flake.nix  okanban.opam
client/: bsconfig.json  default.nix  package-lock.json  package.json  webpack.config.js
client/lib/bs/: .bsbuild  .bsdeps  .ninja_log  .sourcedirs.json  build.ninja  install.ninja
client/lib/bs/src/: Api.ast  Api.cmj  Api.cmt  Api.d  Board.ast  Board.cmt  Board.d  Card.ast  Card.cmt  Card.d  CardForm.ast  CardForm.cmj  CardForm.cmt  CardForm.d  Column.ast  Column.cmj  Column.cmt  Column.d  Index.ast  Index.cmj  Index.cmt  Index.d  Types.ast  Types.cmj  Types.cmt
client/src/: Api.res  Board.res  Card.res  CardForm.res  Column.res  Index.res  Types.res
lib/: dune  model.ml  server.ml
public/: index.html  styles.css
